# odon

./: .gitignore  Cargo.toml  README.md  build.rs  mkdocs.yml
.github/workflows/: ci.yml  docs.yml  release.yml
assets/: odon.icns
docs/: getting-started.md  index.md
docs/advanced/: current-limitations.md
docs/assets/: odon-deep-link-test.html
docs/data-sources/: example-datasets.md  object-and-overlay-data.md  ome-zarr.md  overview.md  projects-and-samplesheets.md  spatialdata-and-xenium.md
docs/reference/: cli.md  codex-mcp-odon.md  controls.md  deep-links.md
docs/workflows/: mask-polygons.md  mosaic.md  objects-and-overlays.md  thresholding.md  viewing.md
examples/: example.project.json
fixtures/: README.md  odon-deep-link-test.html  synthetic_5ch.project.json
fixtures/synthetic_5ch.ome.zarr/: .zattrs
installers/windows/: odon.iss
scripts/: build-app.sh  generate-icons.sh  generate_ome_zarr_fixture.py  make_pyramid_fixture.py  mask_tif_to_geojson.py  package-linux-deb.sh  package-linux.sh  package-macos-dmg.sh  package-windows.ps1  patch_synapse_zarr_channel_names.py  register-macos-url-handler.sh  tif_to_omezarr.py  wrangle_synapse_tissues_samplesheet.py
src/: app.rs  camera.rs  debug_log.rs  deep_link.rs  deep_link_ipc.rs  lib.rs  main.rs  root_app.rs
src/annotations/: gl.rs  mod.rs
src/app_support/: memory.rs  menu.rs  mod.rs  repaint.rs  screenshot.rs  settings.rs
src/custom/: cell_thresholds.rs  mod.rs  roi_selector.rs
src/data/: dataset_kind.rs  dataset_source.rs  mod.rs  ome.rs  project_config.rs  remote_store.rs  samplesheet.rs  (+1 more)
(+116 files in other folders)
